--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,37 @@
 *{
   margin: 0;
 }
+
+body{
+  background-color: #f5f6fa;
+}
+
+.app {
+  display: flex;
+  justify-content: space-evenly;
+  padding: 20px;
+}
+
+.app_leftSide{
+  flex: 0.9;
+}
+
+.app_header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 20px;
+}
+
+.app_stats {
+  display: flex;
+  justify-content: space-between;
+}
+
+
+
+@media (max-width: 990px) {
+  .app{
+    flex-direction: column;
+  }
+}
