--- a/src/components/Map.css
+++ b/src/components/Map.css
@@ -8,12 +8,12 @@
 }
 
 .map .leaflet-container {
-  height: 100% !important;
+  height: 100%;
   border-radius: 12px;
 }
 
 .info-flag img {
-  width: 100px;
+  width: 100px;  
   border-radius: 5px;
 }
 
@@ -37,6 +37,6 @@
 .info-confirmed,
 .info-recovered,
 .info-deaths {
-  font-size: 16px;
+  font-size: 12px;
   margin-top: 5px;
 }
