--- a/src/components/InfoBox.css
+++ b/src/components/InfoBox.css
@@ -1,22 +1,46 @@
-.infoBox{
-    flex: 1
+.infoBox {
+  flex: 1;
+  cursor: pointer;
+  padding: 15px;
 }
 
-.infoBox:not(:last-child){
-    margin-right: 15px;
+.MuiCardContent-root:last-child {
+  padding: 0 !important;
 }
 
+.infoBox:not(:last-child) {
+  margin-right: 15px;
+}
+
+.infoBox--selected {
+  border-top: 10px solid greenyellow;
+}
+
+.infoBox--redBox {
+  border-color: #fe4a49;
+}
+
+.text--color--green {
+  color: #49fe4a !important;
+}
 
 .infoBox_cases {
-    color: #cc1034;
-    font-weight: 600;
-    font-size: 30px;
-    margin-bottom: 10px;
+  color: #fe4a49;
+  font-weight: 600;
+  font-size: 30px;
 }
 
 .infoBox_total {
-    color:#6c757d;
-    font-weight: 700 !important;
-    font-size: 15px !important;
-    margin-top: 15px !important;
+  color: #6c757d;
+  font-weight: 700 !important;
+  font-size: 15px !important;
 }
+
+@media (max-width: 600px) {
+    .infoBox:not(:last-child) {
+        margin-right: 0;
+      }
+  }
+
+
+
