--- a/src/components/Map.css
+++ b/src/components/Map.css
@@ -1,9 +1,9 @@
 .map {
-  height: 500px;
+  height: 490px;
   background-color: white;
-  padding: 1rem;
+  padding: 10px;
   border-radius: 20px;
-  margin-top: 16px;
+  margin-top: 10px;
   box-shadow: 0 0 8px -4px rgba(0, 0, 0, 0.5);
 }
 
