--- a/src/components/Table.css
+++ b/src/components/Table.css
@@ -1,19 +1,27 @@
 .table {
-    margin-top: 20px;
-    height: 400px;
-    overflow: auto;
-    color: #6a5d5d;
+  margin-top: 20px;
+  height: 400px;
+  overflow: auto;
+  color: #6a5d5d;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+.table::-webkit-scrollbar {
+  display: none;
 }
 
 .table tr {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
+  padding-left: 5px;
+  padding-right: 5px;
 }
 
-.table td{
-    padding: 3px;
+.table td {
+  padding: 3px;
 }
 
 .table tr:nth-of-type(odd) {
-    background-color: #f3f2f8;
+  background-color: #e6e6ea;
 }
